# AVRModPlay

./: .gitignore  AVRModPlay.h  CMakeLists.txt  LICENSE  README.md  README.txt  library.properties
examples/HelloMod/: HelloMod.ino
extras/songs/: README.md  download.sh  mod-to-inc.py  songs.lst
mod8/: Config.hpp  Format.hpp  Math.hpp  Player.hpp
src/mod8/: Channel.hpp  Player.hpp  Sampler.hpp  Timer.hpp
test/: CMakeLists.txt  README.md  calc-mod-hash.py  calc-wav-hash.py  main.cpp  run-test.py
test/hash/: 14k_trance.mod.md5  14k_trance.mod.wav.md5  28.mod.md5  28.mod.wav.md5  8_ohms_10_hidden.mod.md5  8_ohms_10_hidden.mod.wav.md5  alive_and_kicking.mod.md5  alive_and_kicking.mod.wav.md5  alloyrun.mod.md5  alloyrun.mod.wav.md5  alphaville.mod.md5  alphaville.mod.wav.md5  anything_wrong.mod.md5  anything_wrong.mod.wav.md5  arkanoid_final.mod.md5  arkanoid_final.mod.wav.md5  backbackbackback.mod.md5  backbackbackback.mod.wav.md5  banana_slut_08.mod.md5  banana_slut_08.mod.wav.md5  banana_slut_15.mod.md5  banana_slut_15.mod.wav.md5  banana_slut_16.mod.md5  banana_slut_16.mod.wav.md5  banana_slut_20.mod.md5  banana_slut_20.mod.wav.md5  banana_slut_24.mod.md5  banana_slut_24.mod.wav.md5  baracoda.mod.md5  baracoda.mod.wav.md5  behind_the_walls.mod.md5  behind_the_walls.mod.wav.md5  between2.mod.md5  between2.mod.wav.md5  big_deal.mod.md5  big_deal.mod.wav.md5  black_ice.mod.md5  black_ice.mod.wav.md5  blue_socks.mod.md5  blue_socks.mod.wav.md5  (+209 more)
